<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lbl_detail_stories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/detail_of_heroes"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/img_hero_detail"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_hero_detail" />

        <TextView
            android:id="@+id/tv_lbl_hero_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_hero_detail"
            app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
            style="@style/StyleLabel"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_hero_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_hero_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_lbl_hero_name_detail"
            style="@style/StyleNameHero"
            tools:text="Hero Name" />

        <TextView
            android:id="@+id/tv_lbl_alias_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_hero_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_hero_name_detail"
            style="@style/StyleLabel"
            android:text="@string/alias" />

        <TextView
            android:id="@+id/tv_alias_hero_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/img_hero_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_lbl_alias_detail"
            style="@style/StyleNameHero"
            tools:text="Steve Rogers" />

        <TextView
            android:id="@+id/tv_lbl_Summary_hero_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_hero_detail"
            android:layout_marginStart="16dp"
            style="@style/StyleLabel"
            android:text="@string/summary"
            />

        <TextView
            android:id="@+id/tv_Summary_hero_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lbl_Summary_hero_detail"
            style="@style/StyleDescription"
            tools:text="This detail summary of heroes"
            />

        <TextView
            android:id="@+id/tv_lbl_power_hero_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Summary_hero_detail"
            style="@style/StyleLabel"
            android:text="@string/power"
            />

        <TextView
            android:id="@+id/tv_power_hero_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lbl_power_hero_detail"
            style="@style/StyleDescription"
            tools:text="Power of heroes"
            />

        <TextView
            android:id="@+id/tv_lbl_abilities_hero_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_power_hero_detail"
            style="@style/StyleLabel"
            android:text="@string/abilities"
            />

        <TextView
            android:id="@+id/tv_abilities_hero_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lbl_abilities_hero_detail"
            style="@style/StyleDescription"
            tools:text="abilities of heroes"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
